--- a/home.html
+++ b/home.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colourpicker</title>
-    <link href="./stylesheet.css">
+    <title>Hue</title>
+    <link type="text/css" rel="stylesheet" href="css/mobile.css">
+    <link type="text/css" rel="stylesheet" href="css/desktop.css" media="only screen and (min-width: 680px)">
 </head>
-<h1>Hue</h1>
-    <h1>This is a test website where colour pallettes will be displayed</h1>
-    still testingn the text 
 <body>
+    <img class="logo" src="images/Leeds_United_Fc_Black.png" alt="logo" height="50px" width="50px">
+    <div class="topnav">
+        <nav>
+            <a class="active" href="#home">Home</a>
+            <a href="#pallets">Palletes</a>
+            <a href="#account">Account</a>
+            <a href="#about">About</a>
+        </nav>
+    </div>
+    <h1>This is a test website where colour pallettes will be displayed</h1>
+    still testingn the text
     <h2>Hue</h2>
     <h3>This is a test website where colour pallettes will be displayed</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti fugit nulla qui quasi voluptate quia porro, molestiae omnis commodi. Quia, amet deleniti suscipit quis eveniet explicabo consectetur corrupti sunt id ad ab nesciunt dolore corporis! Sint laboriosam cumque accusamus dolore reprehenderit error incidunt, consequuntur delectus iure maiores numquam maxime voluptates? </p>
     
-    <div class="color-picker"</div>
+    <div class="color-picker">
         <input type="range" id="redRange" min="0" max="255" value="0">
         <input type="range" id="blueRange" min="0" max="255" value="0">
         <input type="range" id="greenRange" min="0" max="255" value="0">
