--- a/Public/home.html
+++ b/Public/home.html
@@ -18,7 +18,7 @@
         </nav>
     </div>
     <h1>This is a test website where colour pallettes will be displayed</h1>
-    still testingn the text
+    still testing the text
     <h2>Hue</h2>
     <h3>This is a test website where colour pallettes will be displayed</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti fugit nulla qui quasi voluptate quia porro, molestiae omnis commodi. Quia, amet deleniti suscipit quis eveniet explicabo consectetur corrupti sunt id ad ab nesciunt dolore corporis! Sint laboriosam cumque accusamus dolore reprehenderit error incidunt, consequuntur delectus iure maiores numquam maxime voluptates? </p>
